--- a/WebRoot/css/asideStyle.css
+++ b/WebRoot/css/asideStyle.css
@@ -6,7 +6,7 @@ aside{
     border: 2px solid rgba(119, 119, 119, 0.3);
     /*position: relative;*/
 }
-aside .header{overflow: hidden;border-bottom: 1px solid #777; padding: 0 10px 5px 10px;}
+aside .header{overflow: hidden;border-bottom: 1px solid #777; padding: 5px 10px 5px 10px;}
 aside .header h2{float:left;margin-bottom: 10px;}
 aside li{cursor: pointer;}
 .changefile  span{
@@ -55,7 +55,7 @@ aside #searchform .search-term{width:170px;}
 
 
 .selected{background-color: #ccc;}
-#allFile{
+#allFile,#keepInFile{
     padding: 10px 0 0 20px;
     font-size: 10pt;
     /*position: relative;*/
@@ -85,7 +85,7 @@ aside #searchform .search-term{width:170px;}
 	background-size:10px 10px;
 }
 #searchFile li:hover>.downfile,#allFile li:hover>.downfile{display:block;}
-#searchFile{
+#searchFile,#keepInFile{
     padding:15px 0;
     font-size: 10pt;
     line-height: 20px;
@@ -93,5 +93,5 @@ aside #searchform .search-term{width:170px;}
     list-style: none;
 }
 
-#searchFile li:hover,#allFile>li:hover{background: rgba(210,210,210,0.5);}
+#searchFile li:hover,#allFile>li:hover,#keepInFile>li:hover{background: rgba(210,210,210,0.5);}
 .alertconfim{display: none;}
