--- a/WebRoot/css/uploadify.css
+++ b/WebRoot/css/uploadify.css
@@ -11,7 +11,9 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	color: #000;
 	padding: 20px;
 	font-size: 14px;
-	background:url(images/icons/import.png) no-repeat left center;
+	background-repeat:no-repeat;
+	background-position:left center;
+	/*background:url(images/icons/import.png) no-repeat left center;*/
 }
 .uploadify:hover .uploadify-button {
 	color: #666;
