--- a/WebRoot/css/main.css
+++ b/WebRoot/css/main.css
@@ -85,7 +85,7 @@ html,body {
 	bottom: 0;
 	background:url(images/body-bg.png) repeat-x top #EFEFFF;
 }
-#bd #main #tabs #contentList div{
+#bd #main #tabs #contentList>div{
 	position: absolute;
 	padding: 0 1px;
 	top: 0;
@@ -216,6 +216,10 @@ html,body {
 	padding:20px;
 	background:url(images/icons/document.png) no-repeat left center;
 }
+.savelist_icon{
+	padding:20px;
+	background:url(images/icons/copy.png) no-repeat left center;
+}
 .import_icon{
 	padding:20px;
 	background:url(images/icons/import.png) no-repeat left center;
@@ -264,23 +268,24 @@ html,body {
 .default_li{
 	float:left;
 	display:inline-block;
-	width:150px;
-	height:150px;
+	width:130px;
+	height:100px;
+	margin:10px;
 	cursor:pointer;
 	position:relative;
 }
 
 .default_li .default_df{
-	padding:8px;
+	padding:10px;
 	position:absolute;
-	right:10px;
-	bottom:0;
+	right:5px;
+	bottom:0px;
 	background: url(images/icons/move-down.png) no-repeat top center;
 }
 
 .default_file{
-	width:150px;
-	height:150px;
+	width:130px;
+	height:100px;
 	position:absolute;
 	left:0;
 	top:0;
@@ -288,8 +293,8 @@ html,body {
 
 .default_file span{
 	position:absolute;
-	left:20px;
-	bottom:0;
+	left:5px;
+	bottom:0px;
 	font-size:14px;
 	color:#000;
 	width:100px;
@@ -315,12 +320,36 @@ html,body {
 	background: url(images/file/jpg.png) no-repeat top center;
 }
 
+.btn-box{
+	position:absolute;
+	right:6px;
+	top:0;
+}
+.fileli{
+	padding:10px;
+	cursor:pointer;
+	position:relative;
+}
+.fileli:hover{
+	background-color:rgba(100,100,100,0.7);
+}
 
+.fileli > img{
+	display:inline-block;
+	margin:0px 10px;
+	float:right;
+}
 
-
-
-
-
+.fileli a{
+	display:inline-block;
+	padding:10px;
+	background:url(images/move-down.png);
+	background-repeat:no-repeat;
+	background-position:center;
+	position:absolute;
+	top:0px;
+	right:50px;
+}
 
 
 
